@@ -30,6 +30,7 @@ features:
 - added SCIPsortLongPtrRealBool(), SCIPsortLongPtrRealRealBool(), SCIPsortLongPtrRealRealIntBool() and corresponding
   methods for sorting, insertion and deletion
 - added a data pointer to each node of the SCIP_DIGRAPH
+- the statistics now include the value of the first LP solved at the root node (without cuts)
 
 performance improvements:
 - conflict consisting of exactly two binary variables will be handled as set-packing constraint instead of an logicor
@@ -56,6 +57,7 @@ interface
   tries to derive global boundchanges and also to shorten this set of variables by using cliqe, implication and variable
   bound information
 - removed all message length parameters in message.c and for printing error messages (not needed anymore)
+- new methods SCIPgetFirstLP{Dual/Lower}boundRoot() which return the value of the first LP solved at the root node
 
 parameters:
 - new parameter <lp/disablecutoff> (default FALSE), by which the LP cutoff bound can be disabled (when set to TRUE)
@@ -74,7 +76,7 @@ parameters:
   be scaled to integral coefficients, with maximal rank 3 into account
 
 core:
-- added presolve.{c,h} which should be used, for all preprocessing mechanismsexecuted from within SCIP, corresponding to
+- added presolve.{c,h} which should be used for all preprocessing mechanisms executed from within SCIP, corresponding to
   solve.{c,h}, and also for presprocessing methods which can be called from different plugins or from the core to avoid
   code doubling
 - the main output routine of message.c (bufferMessage - now handleMessage) has been rewritten: it now does not need
